crates/swc_ecma_parser/tests/test262-error-references/fail/9f15affa01060595.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/9f15affa01060595.js:1:12
  |
1 | function*g(yield = 0){}
  |            ^^^^^

